# ITI_SLAM

./: README.md
BagFiles/SLAM/: metadata.yaml
BagFiles/gps/: gps_0.db3  metadata.yaml
Embedded/: Encoder_speed.ino  Esp8266Ros_Encoder.ino  port_comd.txt
FILES/launch/: dual_ekf_navsat_example.launch.py
FILES/params/: dual_ekf_navsat_example.yaml
carkyo_msgs/: CMakeLists.txt  package.xml
carkyo_msgs/msg/: CameraEmergency.msg
img/: library_map.pgm  map_1623875690.pgm
iti_lab4/: package.xml  setup.cfg  setup.py
iti_lab4/iti_lab4/: pub.py  tf_node_.py
iti_lab4/launch/: tf_.launch.py
iti_lab7/: package.xml  setup.cfg  setup.py
iti_lab7/iti_lab7/: sub_task1.py  sub_task2.py
motion/: package.xml  setup.cfg  setup.py
motion_estimation/: package.xml  setup.cfg  setup.py
motion_estimation/motion_estimation/: movement_dir.py
motion_estimation/motion_estimation/rosbag2_2021_06_13-11_00_29/: metadata.yaml
my_msgsandsrvs/: CMakeLists.txt  package.xml
my_msgsandsrvs/msg/: Firstmsg.msg  StrInt.msg
my_msgsandsrvs/srv/: Arv.srv  BoolStr.srv  Firstsrv.srv  PosTurt.srv
odometry/: package.xml  setup.cfg  setup.py
odometry/odometry/: GGA_GST.csv  odom_pub.py  pose.csv  publish_gps_messge.py  task1_odom.py
override_stop/: package.xml  setup.cfg  setup.py
override_stop/override_stop/: override_cmd.py
pcl/filter_pcl/: CHANGELOG.rst  CMakeLists.txt  package.xml
pcl/filter_pcl/include/filter_pcl/: processPointClouds.h
pcl/filter_pcl/launch/: filter_camera_launch.py  gazebo_filter_camera_launch.py
pcl/filter_pcl/src/: close_obstacle_detection.cpp  filter_pcl.cpp  processPointClouds.cpp
pic/: ITI_LibraryMapping.pgm
pid_turt/: package.xml  setup.cfg  setup.py
pid_turt/pid_turt/: pid_turtle.py
ros_cv/: package.xml  setup.cfg  setup.py
ros_cv/ros_cv/: shi_tomas.py
rs2_project/: package.xml  setup.cfg  setup.py
rs2_project/launch/: my_file.launch.py
rs2_project/rs2_project/: control_node.py  spawn_node.py  turtle_limit.py
simulation_demo/: CMakeLists.txt  README.md  package.xml
simulation_demo/launch/: empty_world.launch.py  magni_house.launch.py  static_tf_pub.launch.py
simulation_demo/models/magni_robot/: model.config  model.sdf
simulation_demo/models/realsense/: model.config  realsense.sdf
simulation_demo/worlds/: empty.model  magni_robot.model
slam_iti/: package.xml  setup.cfg  setup.py
slam_iti/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
slam_iti/install/slam_iti/lib/slam_iti/: get_odom_scan  odom  read_plan_trajectory  sub_n
slam_iti/install/slam_iti/share/slam_iti/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
slam_iti/launch/: tf_.launch.py
slam_iti/log/: latest_build
slam_iti/slam_iti/: functions.py  functions2.py  get_odom_scan.py  odom.py  pid_control.py  read_plan_trajectory.py  sub_n.py
